--- a/trips/hk.html
+++ b/trips/hk.html
@@ -4,14 +4,14 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <meta name="theme-color" content="#0f1115">
-  <title>Hong Kong · 3h City Walk</title>
+  <title>Hong Kong · 3h City Walk（预览）</title>
   <link rel="stylesheet" href="../style.css">
 </head>
 <body data-page="trip">
   <header>
     <div class="bar">
       <div class="brand">Trip · Hong Kong</div>
-      <a class="btn" href="#audio">▶ Play</a>
+      <a class="btn" href="#unlock">🔓 Unlock</a>
     </div>
   </header>
 
@@ -20,50 +20,57 @@
       <img src="../assets/cover.jpg" alt="Hong Kong Cover">
       <div>
         <h1>Hong Kong · 3h City Walk</h1>
-        <p class="note">起点：中环天星码头 · 时长：≈3 小时 · 强度：轻 · 适合：第一次来港想走“老味道+新地标”的旅人</p>
+        <p class="note">总时长 ≈3h · 步行 4.2km · 爬升 90m · 最佳时段：15:30–18:30</p>
       </div>
     </section>
 
-    <section class="card reveal">
-      <h2>行程简介</h2>
-      <p>这是一条沿着海风前行的城市散步：从天星小轮的汽笛声，到石板街的坡度，再到霓虹灯与茶走的甜味。路线以“层次”组织内容：先看开阔的维港，再钻进街巷，最后收束在能安静坐下的茶室。</p>
-      <ul>
-        <li><strong>为什么从海开始：</strong>开阔视野能快速建立空间感，三分钟就能记住“山—城—海”的轴线。</li>
-        <li><strong>为什么要上坡：</strong>坡道带来节奏变化，让“旧城肌理”从脚底下被感知。</li>
-        <li><strong>如何结束：</strong>在茶室落点，把信息收束成味觉记忆，旅程不散乱。</li>
-      </ul>
-    </section>
-
-    <section id="gallery">
-      <h2>图片</h2>
-      <div class="grid">
-        <div class="card reveal"><img src="../assets/img1.jpg" alt=""></div>
-        <div class="card reveal"><img src="../assets/img2.jpg" alt=""></div>
-        <div class="card reveal"><img src="../assets/img3.jpg" alt=""></div>
-        <div class="card reveal"><img src="../assets/img4.jpg" alt=""></div>
+    <section class="card stop reveal" id="stop1">
+      <h3>Stop 1 · 天星小轮的风（免费）</h3>
+      <p>先用海风“定锚”城市：站在栏杆边看山城轮廓，记住山—城—海的三层结构。</p>
+      <audio controls preload="none" src="../assets/audio1.m4a"></audio>
+      <div class="imgs">
+        <img src="../assets/img1.jpg" alt="">
+        <img src="../assets/img2.jpg" alt="">
+        <img src="../assets/img3.jpg" alt="">
       </div>
+      <p class="note">提示：拍海面反光要等浪面角度；手机锁定曝光到 -0.3 左右。</p>
     </section>
 
-    <section id="audio" class="reveal">
-      <h2>音频讲解</h2>
-      <div class="card">
-        <audio id="player1" controls preload="none" src="../assets/audio1.m4a"></audio>
-        <p class="note">耳机更佳：每个点位 1–3 分钟，控制总时长在 15–20 分钟，中间留 30–60 秒用于“观察提示”。</p>
+    <section class="card stop reveal" id="stop2">
+      <h3>Stop 2 · 石板街的坡度（免费）</h3>
+      <p>上坡带来节奏变化：脚下的颗粒感能让“旧城肌理”被身体记住。抬头看招牌间的天井。</p>
+      <audio controls preload="none" src="../assets/audio1.m4a"></audio>
+      <div class="imgs">
+        <img src="../assets/img4.jpg" alt="">
+        <img src="../assets/img5.jpg" alt="">
+        <img src="../assets/img6.jpg" alt="">
       </div>
+      <p class="note">避坑：节假日人流密集，改走右侧石阶支路，10 分钟后回主线。</p>
     </section>
 
-    <section id="map" class="reveal">
-      <h2>地图与集合点</h2>
-      <iframe class="map" src="https://www.google.com/maps?q=22.28552,114.15769&hl=zh-CN&z=14&output=embed" loading="lazy"></iframe>
-      <p class="note"><strong>集合点：</strong>中环天星码头（Star Ferry Central） · <strong>建议：</strong>下午 3:30 出发，顺光拍海面；若遇雨，改为遮檐连廊版路线。</p>
-    </section>
-
-    <section id="pay" class="reveal">
-      <h2>支持创作</h2>
-      <div class="card" style="max-width:280px">
-        <img src="../assets/pay-qr.png" alt="扫码支持">
-        <p class="note">扫描二维码以支持内容创作；这只是“线下扫码展示”，不含在线支付回调。</p>
+    <section class="card reveal" id="unlock">
+      <h2>解锁完整版 · 5 站音频 + 专业提示</h2>
+      <p>包含：Stop 3–5 长版音频（每站 2–3 分钟） · 下载地图 · 替代点与雨天路线。</p>
+      <div style="display:flex; gap:8px; flex-wrap:wrap">
+        <!-- 真实支付：把链接换成你的 Stripe/Gumroad/Ko-fi 链接 -->
+        <!-- <a class="btn" target="_blank"
+           href="https://buy.stripe.com/REPLACE_ME"
+           onclick="window.plausible && plausible('checkout_intent'); window.gtag && gtag('event','checkout_intent',{page:location.pathname});">
+          🔓 Unlock Full Audio · HK$29
+        </a> -->
+        <!-- 先用假门测试（跳到本地感谢页） -->
+        <a class="btn" href="../unlock.html"
+           onclick="window.plausible && plausible('checkout_intent'); window.gtag && gtag('event','checkout_intent',{page:location.pathname});">
+          🔓 Unlock Full Audio · HK$29
+        </a>
       </div>
+      <p class="note">说明：若启用真实支付，请把上面的链接换成你的支付链接，并设置成功跳转到 <code>/unlock.html</code>。</p>
+    </section>
+
+    <section class="card stop reveal" id="preview">
+      <h3>（预告）Stop 3 · 中环立面与阴影</h3>
+      <p>沿干诺道中对齐城市“立面”；观察玻璃幕墙的反射缝，辨识建筑年代层。</p>
+      <p class="note">完整版含：最佳站位、镜头焦段与风向选择；雨天备选视角。</p>
     </section>
   </main>
 
@@ -73,5 +80,17 @@
   </nav>
 
   <script src="../script.js"></script>
+  <script>
+    (function(){
+      const io=new IntersectionObserver(es=>{
+        es.forEach(e=>{ if(e.isIntersecting){ 
+          window.plausible && plausible('section_view',{props:{id:e.target.id}});
+          window.gtag && gtag('event','section_view',{id:e.target.id,page:location.pathname});
+          io.unobserve(e.target);
+        }});
+      },{threshold:.2});
+      document.querySelectorAll('.stop,.reveal').forEach(el=>io.observe(el));
+    })();
+  </script>
 </body>
 </html>
